# Mazeli-2.0

./: CMakeLists.txt  Mazeli-2.0.sln  README.md
.github/workflows/: release.yml
Mazeli-2.0/: .gitignore  Mazeli-2.0.aps  Mazeli-2.0.vcxproj  Mazeli-2.0.vcxproj.filters  README.md  mainApp.cpp  mainApp.h  maze.cpp  maze.h  mazeSolverAlgo.cpp
Mazeli-2.0/x64/Debug/: Mazeli-2.0.exe.recipe  vc143.idb
Mazeli-2.0/x64/Debug/Mazeli-2.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Mazeli-2.0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Mazeli-2.0/x64/Release/Mazeli-2.0.tlog/: Mazeli-2.0.lastbuildstate
